--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ body {
   font-family: 'Montserrat', Tahoma, sans-serif;
   background: #1a2332;
   color: white;
+  overflow-x: hidden;
 }
 
 /* ==== HERO ==== */
@@ -25,6 +26,8 @@ body {
   justify-content: flex-start;
   padding-top: 12rem;
   text-align: center;
+  position: relative;
+  z-index: 1;
 }
 .hero h1 {
   font-size: 4rem;
@@ -58,8 +61,10 @@ body {
 
 /* ==== SECTIONS ==== */
 .mountains-section {
+  position: relative;
+  z-index: 2;
   padding: 2rem 2rem 4rem 2rem;
-  margin-top: -4rem; /* posun výš */
+  margin-top: -10rem; /* výraznější posun výš, překrývá pozadí */
 }
 .section-description {
   max-width: 900px;
@@ -88,205 +93,4 @@ body {
 .mountain-card:hover { transform: scale(1.05); }
 
 /* Overlay pouze pro Korunu a Alpy */
-.mountain-overlay {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  padding: 1rem;
-  background: linear-gradient(to top, rgba(0,0,0,0.9), transparent);
-}
-.mountain-name { font-size: 1.3rem; font-weight: 600; }
-.mountain-details { font-size: 0.9rem; opacity: 0.9; }
-
-/* ==== GALERIE MODAL ==== */
-.gallery-modal {
-  display: none;
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.95);
-  z-index: 2000;
-  align-items: center;
-  justify-content: center;
-  touch-action: none;
-}
-.gallery-modal.active { display: flex; }
-.gallery-img {
-  max-width: 90%;
-  max-height: 90%;
-  border-radius: 10px;
-  transition: opacity 0.3s ease;
-}
-.gallery-arrow {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 3rem;
-  color: white;
-  cursor: pointer;
-  user-select: none;
-  background: rgba(0,0,0,0.3);
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.gallery-arrow:hover { background: rgba(255,255,255,0.2); }
-.arrow-left { left: 2rem; }
-.arrow-right { right: 2rem; }
-.close-gallery {
-  position: absolute;
-  top: 2rem;
-  right: 2rem;
-  font-size: 2.5rem;
-  cursor: pointer;
-}
-
-/* ==== RESPONSIVE ==== */
-@media (max-width: 968px) {
-  .hero h1 { font-size: 2.8rem; }
-  .mountains-grid { grid-template-columns: repeat(2, 1fr); }
-}
-@media (max-width: 640px) {
-  .hero { padding-top: 6rem; }
-  .hero h1 { font-size: 2rem; }
-  .hero-buttons { flex-direction: column; gap: 1rem; }
-  .mountains-grid { grid-template-columns: 1fr; }
-}
-</style>
-</head>
-
-<body>
-  <section class="hero">
-    <h1>Vzít batoh na záda a jít...</h1>
-    <div class="hero-buttons">
-      <button class="hero-button" onclick="scrollToSection('koruna-evropy')">Koruna Evropy 14/42</button>
-      <button class="hero-button" onclick="scrollToSection('alpske-ctyrtisicovky')">Alpské čtyřtisícovky 5/82</button>
-      <button class="hero-button" onclick="scrollToSection('Nepal')">Nepál</button>
-    </div>
-  </section>
-
-  <section class="mountains-section" id="koruna-evropy">
-    <div class="mountains-grid" id="mountainsGrid"></div>
-  </section>
-
-  <!-- GALERIE MODAL -->
-  <div class="gallery-modal" id="galleryModal">
-    <span class="close-gallery" onclick="closeGallery()">×</span>
-    <span class="gallery-arrow arrow-left" onclick="prevImage()">&#10094;</span>
-    <img id="galleryImage" class="gallery-img" src="">
-    <span class="gallery-arrow arrow-right" onclick="nextImage()">&#10095;</span>
-  </div>
-
-<script>
-/* ==== DATA ==== */
-const korunaEvropy = [
-  {id:'mont-blanc', name:'Mont Blanc 4.810 m', country:'Francie/Itálie', date:'31.8.2007', image:'https://raw.githubusercontent.com/suchanek76/website/main/images/Koruna/MontBlanc2x3.jpg'},
-  {id:'dufourspitze', name:'Dufourspitze 4.634 m', country:'Švýcarsko', image:null},
-  {id:'grossglockner', name:'Grossglockner 3.798 m', country:'Rakousko', date:'30.6.2025', image:'https://raw.githubusercontent.com/suchanek76/website/main/images/Koruna/Grossglockner2x3.jpg'},
-];
-
-const alpskeCtyrtisicovky = [
-  {id:'alps-1', name:'Mont Blanc / Monte Bianco', country:'Francie/Itálie', image:'https://raw.githubusercontent.com/suchanek76/website/main/images/4000/MontBlanc2x3.jpg'},
-  {id:'alps-2', name:'Mont Blanc di Courmayeur', country:'Itálie', image:null},
-  {id:'alps-3', name:'Dufourspitze / Punta Dufour', country:'Švýcarsko/Itálie', image:null}
-];
-
-const Nepal = Array.from({length:40},(_,i)=>({
-  id:`nepal-${i+1}`,
-  image:`https://raw.githubusercontent.com/suchanek76/website/main/images/Nepal/Nepal${String(i+1).padStart(2,'0')}.jpg`
-}));
-
-/* ==== STAV ==== */
-let currentCategory = 'koruna-evropy';
-let mountains = [];
-let currentImageIndex = 0;
-
-/* ==== FUNKCE ==== */
-function renderMountains() {
-  const grid = document.getElementById('mountainsGrid');
-  grid.innerHTML = '';
-  if(currentCategory==='Nepal'){
-    grid.insertAdjacentHTML('beforebegin',`
-      <div class="section-description">
-        <p>Tady bude popis výletu do Nepálu – zážitky, trasa, atmosféra, hory, lidé a dobrodružství.</p>
-      </div>
-    `);
-  } else {
-    const desc = document.querySelector('.section-description');
-    if(desc) desc.remove();
-  }
-
-  grid.style.gridTemplateColumns = currentCategory==='Nepal' ? 'repeat(4,1fr)' : 'repeat(3,1fr)';
-  mountains.forEach((m,idx)=>{
-    const card=document.createElement('div');
-    card.className='mountain-card';
-    if(m.image) card.style.backgroundImage=`url(${m.image})`;
-    if(currentCategory==='Nepal'){
-      card.onclick=()=>openGallery(idx);
-    } else {
-      card.style.position='relative';
-      card.innerHTML=`
-        <div class="mountain-overlay">
-          <div class="mountain-name">${m.name}</div>
-          <div class="mountain-details">${m.country||''} ${m.date||''}</div>
-        </div>`;
-    }
-    grid.appendChild(card);
-  });
-}
-
-/* ==== GALERIE ==== */
-function openGallery(index){
-  currentImageIndex=index;
-  const modal=document.getElementById('galleryModal');
-  const img=document.getElementById('galleryImage');
-  img.src=Nepal[currentImageIndex].image;
-  modal.classList.add('active');
-}
-function closeGallery(){
-  document.getElementById('galleryModal').classList.remove('active');
-}
-function nextImage(){
-  currentImageIndex=(currentImageIndex+1)%Nepal.length;
-  document.getElementById('galleryImage').src=Nepal[currentImageIndex].image;
-}
-function prevImage(){
-  currentImageIndex=(currentImageIndex-1+Nepal.length)%Nepal.length;
-  document.getElementById('galleryImage').src=Nepal[currentImageIndex].image;
-}
-document.addEventListener('keydown',e=>{
-  if(e.key==='Escape') closeGallery();
-  if(e.key==='ArrowRight') nextImage();
-  if(e.key==='ArrowLeft') prevImage();
-});
-
-/* ==== SWIPE PODPORA ==== */
-let touchStartX=0;
-let touchEndX=0;
-const modal=document.getElementById('galleryModal');
-modal.addEventListener('touchstart',e=>touchStartX=e.changedTouches[0].screenX);
-modal.addEventListener('touchend',e=>{
-  touchEndX=e.changedTouches[0].screenX;
-  if(touchEndX<touchStartX-50) nextImage();
-  if(touchEndX>touchStartX+50) prevImage();
-});
-
-/* ==== NAVIGACE ==== */
-function scrollToSection(sectionId){
-  currentCategory=sectionId;
-  mountains=(sectionId==='koruna-evropy')?korunaEvropy:
-            (sectionId==='alpske-ctyrtisicovky')?alpskeCtyrtisicovky:Nepal;
-  renderMountains();
-  document.getElementById('koruna-evropy').scrollIntoView({behavior:'smooth'});
-}
-
-/* ==== INIT ==== */
-window.addEventListener('DOMContentLoaded',()=>{
-  mountains=korunaEvropy;
-  renderMountains();
-});
-</script>
-</body>
-</html>
+.mountai
