--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@ body {
 /* ==== HERO ==== */
 .hero {
   height: 100vh;
-  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(26,35,50,1) 100%),
-              url('https://raw.githubusercontent.com/suchanek76/website/main/images/background.jpg') center/cover;
+  background: 
+    linear-gradient(to bottom, rgba(0,0,0,0) 70%, rgba(26,35,50,1) 100%),
+    url('https://raw.githubusercontent.com/suchanek76/website/main/images/background.jpg') top center no-repeat;
+  background-size: contain;
   display: flex;
   flex-direction: column;
   align-items: center;
