--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@ body {
   padding-top: 15rem;
   text-align: center;
   background: url('https://raw.githubusercontent.com/suchanek76/website/main/images/background.jpg') top center no-repeat;
-  background-size: contain;
 }
 .hero::after {
   content: "";
@@ -71,7 +70,7 @@ body {
 /* ==== SECTIONS ==== */
 .mountains-section {
   padding: 0rem 2rem 4rem 2rem;
-  margin-top: -10vh; /* posune galerie výš do plochy pozadí */
+  margin: -20rem auto 0 auto;
 }
 .mountains-grid {
   max-width: 1400px;
