--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   /* Top hero with panorama */
   .hero{
-    background-image: url('https://picsum.photos/1600/400?blur=1&random=101');
+    background-image: url('hhttps://raw.githubusercontent.com/suchanek76/website/main/images/background.jpg');
     background-size:cover;
     background-position:center;
     min-height:240px;
